--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.abhi.database"
+        applicationId "com.example.abhi.signup"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
